--- a/environment.yml
+++ b/environment.yml
@@ -2,54 +2,54 @@ name: futu_trade
 channels:
   - defaults
 dependencies:
-  - beautifulsoup4=4.9.3=pyhb0f4dca_0
-  - blas=1.0=mkl
-  - brotlipy=0.7.0=py38h2bbff1b_1003
-  - ca-certificates=2022.3.29=haa95532_0
-  - certifi=2020.12.5=py38haa95532_0
-  - cffi=1.14.5=py38hcd4344a_0
-  - chardet=4.0.0=py38haa95532_1003
-  - colorama=0.4.4=pyhd3eb1b0_0
-  - cryptography=3.4.7=py38h71e12ea_0
-  - et_xmlfile=1.0.1=py_1001
-  - html5lib=1.1=py_0
-  - humanize=3.5.0=pyhd3eb1b0_0
-  - idna=2.10=pyhd3eb1b0_0
-  - importlib_metadata=3.10.0=hd3eb1b0_0
-  - intel-openmp=2021.2.0=haa95532_616
-  - jdcal=1.4.1=py_0
-  - mkl=2021.2.0=haa95532_296
-  - mkl-service=2.3.0=py38h2bbff1b_1
-  - mkl_fft=1.3.0=py38h277e83a_2
-  - mkl_random=1.2.1=py38hf11a4ad_2
-  - openpyxl=3.0.5=py_0
-  - openssl=1.1.1n=h2bbff1b_0
-  - pandas=1.2.0=py38hf11a4ad_0
-  - pycparser=2.20=py_2
-  - pyopenssl=20.0.1=pyhd3eb1b0_1
-  - pysocks=1.7.1=py38haa95532_0
-  - python=3.8.8=hdbf39b2_5
-  - python-dateutil=2.8.1=pyhd3eb1b0_0
-  - pytz=2021.1=pyhd3eb1b0_0
-  - six=1.15.0=py38haa95532_0
-  - soupsieve=2.2.1=pyhd3eb1b0_0
-  - sqlite=3.35.4=h2bbff1b_0
-  - urllib3=1.26.4=pyhd3eb1b0_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - webencodings=0.5.1=py38_1
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - win_inet_pton=1.1.0=py38haa95532_0
-  - wincertstore=0.2=py38_0
-  - xlrd=2.0.1=pyhd3eb1b0_0
-  - yaml=0.2.5=he774522_0
-  - zipp=3.4.1=pyhd3eb1b0_0
+  - beautifulsoup4=4.9.3
+  - blas=1.0
+  - brotlipy=0.7.0
+  - ca-certificates=2022.3.29
+  - certifi=2021.10.8
+  - cffi=1.14.5
+  - chardet=4.0.0
+  - colorama=0.4.4
+  - cryptography=3.4.7
+  - et_xmlfile=1.0.1
+  - html5lib=1.1
+  - humanize=3.10.0
+  - idna=2.10
+  - importlib_metadata=3.10.0
+  - intel-openmp=2021.2.0
+  - jdcal=1.4.1
+  - mkl=2021.2.0
+  - mkl-service=2.3.0
+  - mkl_fft=1.3.0
+  - mkl_random=1.2.1
+  - numpy-base=1.20.1
+  - openpyxl=3.0.5
+  - openssl=1.1.1n
+  - pandas=1.2.0
+  - pycparser=2.20
+  - pyopenssl=20.0.1
+  - pysocks=1.7.1
+  - python=3.8.8
+  - python-dateutil=2.8.1
+  - pytz=2021.1
+  - six=1.15.0
+  - soupsieve=2.2.1
+  - sqlite=3.35.4
+  - urllib3=1.26.4
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - webencodings=0.5.1
+  - wheel=0.36.2
+  - win_inet_pton=1.1.0
+  - wincertstore=0.2
+  - xlrd=2.0.1
+  - zipp=3.4.1
   - pip:
+      - astroid==2.11.2
       - asttokens==2.0.5
       - atomicwrites==1.4.0
       - attrs==21.4.0
       - backcall==0.2.0
-      - backtesting==0.3.1
       - bokeh==2.3.0
       - charset-normalizer==2.0.12
       - cx-freeze==6.6
@@ -57,6 +57,7 @@ dependencies:
       - cycler==0.11.0
       - decorator==5.1.1
       - deprecated==1.2.13
+      - dill==0.3.4
       - docopt==0.6.2
       - empyrical==0.5.5
       - executing==0.8.3
@@ -65,15 +66,18 @@ dependencies:
       - importlib-metadata==4.0.1
       - iniconfig==1.1.1
       - ipython==8.1.1
+      - isort==5.10.1
       - jedi==0.18.1
-      - jinja2==3.1.0
+      - jinja2==3.0.3
       - joblib==1.0.0
       - kids-cache==0.0.7
       - kiwisolver==1.4.0
+      - lazy-object-proxy==1.7.1
       - lxml==4.6.3
       - markupsafe==2.1.1
       - matplotlib==3.5.1
       - matplotlib-inline==0.1.3
+      - mccabe==0.7.0
       - multitasking==0.0.9
       - numpy==1.19.3
       - packaging==21.3
@@ -83,31 +87,37 @@ dependencies:
       - pillow==9.0.1
       - pip==22.0.4
       - pipreqs==0.4.10
+      - platformdirs==2.5.1
       - pluggy==1.0.0
       - prompt-toolkit==3.0.28
       - protobuf==3.5.1
       - psutil==5.9.0
       - pure-eval==0.2.2
       - py==1.11.0
+      - pyarrow==7.0.0
       - pycryptodome==3.9.9
-      - pyfolio==0.9.2
       - pygments==2.11.2
+      - pylint==2.13.5
       - pyparsing==3.0.7
       - pypiwin32==223
+      - pyqt5==5.14.0
       - pyqt5-qt5==5.15.2
       - pyqt5-sip==12.8.1
+      - pyqt6-qt6==6.3.0
+      - pyqt6-sip==13.3.1
       - pyqtgraph==0.12.1
-      - pyside6==6.0.3
+      - pyside6==6.3.0
+      - pyside6-addons==6.3.0
+      - pyside6-essentials==6.3.0
       - pytest==7.1.1
       - pywin32==303
       - pyxlsb==1.0.7
       - pyyaml==5.4.1
       - requests==2.27.1
-      - scikit-learn==1.0.2
       - scipy==1.6.0
       - seaborn==0.11.2
       - setuptools==56.2.0
-      - shiboken6==6.0.3
+      - shiboken6==6.3.0
       - simplejson==3.17.2
       - stack-data==0.2.0
       - threadpoolctl==2.1.0
@@ -117,8 +127,9 @@ dependencies:
       - traitlets==5.1.1
       - tulipy==0.4.0
       - typing==3.7.4
-      - typing-extensions==3.7.4.3
+      - typing-extensions==4.1.1
       - wcwidth==0.2.5
       - wrapt==1.13.3
       - yarg==0.1.9
       - yfinance==0.1.70
+prefix: C:\Users\billpwchan\anaconda3\envs\futu_trade
